--- a/src/scss/components/about.scss
+++ b/src/scss/components/about.scss
@@ -22,7 +22,7 @@
     color: var(--white-color-10);
     -webkit-text-stroke: 2px var(--white-color-10);
     position: absolute;
-    top: 0;
+    top: -38px;
 
     z-index: -1;
   }
