--- a/src/scss/base/vars.scss
+++ b/src/scss/base/vars.scss
@@ -15,12 +15,12 @@
 
       --gradient-color-start: rgba(255, 255, 255, 0.1); /* Белый с прозрачностью */
       --gradient-color-middle: rgba(255, 255, 255, 1); /* Белый */
-      --gradient-color-end: rgba(255, 255, 255, 0.1); /*
+      --gradient-color-end: rgba(255, 255, 255, 0.1); 
 
 
 
-    --color-bg1: #131313; /* Очень тёмный оттенок для фона */
-    --color-bg2: #131313; /* Тёмно-синий */
+    --color-bg1: #131313; 
+    --color-bg2: #131313; 
     --color1: 52, 117, 237; /* Голубой #3475ED */
     --color2: 45, 76, 255; /* Синий #2d4cff */
     --color3: 45, 76, 255; /* Светло-синий */
