--- a/src/html/components/footer.html
+++ b/src/html/components/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <div class="container footer__container">
+  <div class=" footer__container">
     <div class="footer__left">
         <div class="footer__left-white"></div>
         <div class="footer__left-black"></div>
