--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -15,6 +15,7 @@
     justify-content: space-between;
     align-items: center;
     gap: 50px;
+    width: 100%;
   }
 
   &__left {
@@ -224,13 +225,14 @@
     border-bottom: 1px solid var(--white-color-10);
     text-align: right;
     padding-bottom: 30px;
+    padding-right: 50px;
   }
 
   &__contact-list {
     display: flex;
     flex-direction: column;
     margin-top: 30px;
-    
+    padding-right: 50px;
     gap: 20px;
     padding-bottom: 122px;
     border-bottom: 1px solid var(--white-color-10);
