--- a/src/html/components/calc.html
+++ b/src/html/components/calc.html
@@ -29,7 +29,15 @@
               Назад
               </button>
           </div>
-          <p class="quiz-question__text">Вопрос?</p>
+          <div class="quiz-question__wrapper">
+            <p class="quiz-question__text">Вопрос?</p>
+            <div class="quiz-question__annotation">
+              <div class="annotation__icon"><span>i</span></div>
+              <div class="annotation__text-wrapper">
+                <span class="annotation__text"></span>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="calc__quiz-answers">
           <span class="quiz__answer">Ответ 1</span>
