--- a/src/html/components/footer.html
+++ b/src/html/components/footer.html
@@ -3,6 +3,7 @@
     <div class="footer__left">
         <div class="footer__left-white"></div>
         <div class="footer__left-black"></div>
+        <div class="footer__left-flicker"></div>
       <div class="footer__left-inner">
           <h4 class="footer__title">Давайте создадим что-то незабываемое!</h4>
           <p class="footer__text">
