--- a/src/scss/components/calc.scss
+++ b/src/scss/components/calc.scss
@@ -80,8 +80,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
-    
   }
 
   &__quiz {
@@ -109,11 +107,11 @@
     gap: 10px;
     margin-bottom: 30px;
   }
-.quiz-question__upper-row{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
+  .quiz-question__upper-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
   .quiz-question__number {
     font-family: var(--font-family);
     font-weight: 300;
@@ -213,7 +211,7 @@
     border-radius: 50px;
     background-color: var(--blue-color-10);
   }
-  textarea{
+  textarea {
     width: 100%;
     border-radius: 10px;
     padding: 15px;
@@ -224,11 +222,11 @@
     color: var(--black-color-10);
     border: 1px solid var(--blue-color-10);
     background-color: transparent;
-    &:focus{
+    &:focus {
       border: 1px sold var(--black-color-10);
     }
   }
-  .quiz__warning{
+  .quiz__warning {
     font-family: var(--font-family);
     font-weight: 400;
     font-size: 16px;
@@ -268,12 +266,10 @@
   .loading-circle-black {
     position: absolute;
     z-index: 1;
-    
   }
   .loading-circle-blue {
     position: absolute;
     z-index: 1;
-   
   }
 
   &__quiz-result {
@@ -420,7 +416,7 @@
       fill: var(--blue-color-10);
       transition: fill 0.3s ease-in-out;
     }
-    span{
+    span {
       transform: translateY(-2px);
     }
     border: 1px solid var(--black-color-10);
@@ -443,7 +439,6 @@
     background-color: var(--blue-color-10);
     margin-top: 81px;
     align-self: center;
-    
   }
 }
 .loading-message {
@@ -473,36 +468,105 @@
   width: 20px;
   height: 20px;
 }
-[data-theme='light']{
-  .calc__help-btn{
-    transition: color .3s ease-in-out;
-    &:hover{
+[data-theme='light'] {
+  .calc__help-btn {
+    transition: color 0.3s ease-in-out;
+    &:hover {
       color: var(--black-color-10);
     }
   }
   .quiz-result__send,
   .answer__active,
-  .quiz-bottom__accept-btn{
+  .quiz-bottom__accept-btn {
     color: var(--black-color-10);
   }
   .quiz-bottom___progress-bar {
- 
     background-color: rgba(255, 255, 255, 0.2);
   }
-  .quiz-bottom__progress-complete{
+  .quiz-bottom__progress-complete {
     background-color: var(--blue-color-10);
   }
-  .calc__quiz{
-    background: url('./../assets/content/img/grid-dark.png'), var(--white-color-10);
+  .calc__quiz {
+    background: url('./../assets/content/img/grid-dark.png'),
+      var(--white-color-10);
   }
 }
 
-[data-theme='light']{
+[data-theme='light'] {
   input[type='radio']:checked + .quiz-result__method {
-    
     color: var(--black-color-10);
     svg path {
       fill: var(--black-color-10);
     }
   }
+  .annotation__text-wrapper {
+   
+    box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.25);
+  }
+
+}
+
+.quiz-question__wrapper {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  
+}
+
+.quiz-question__annotation{
+  position: relative;
+  width: 20px;
+  height: 20px;
+  display: block;
+}
+
+.annotation__icon {
+  width: 20px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  opacity: 0.5;
+  justify-content: center;
+  border-radius: 50%;
+  border: 1px solid var(--black-color-10);
+  transform: translateY(3px);
+  span {
+    font-family: var(--font-family);
+    font-weight: 300;
+    font-size: 15px;
+    color: var(--black-color-10);
+   
+    transform: translateY(-0.55px);
+  }
+}
+.annotation-active{
+  background-color: var(--blue-color-10);
+  opacity: 1;
+  border: 1px solid var(--blue-color-10);
+  span{
+    color: #fff;
+  }
+}
+
+.annotation__text-wrapper {
+  padding: 20px;
+  background-color: var(--white-color-10);
+  border-radius: 0 20px 20px 20px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.25);
+  position: absolute;
+  top: 100%;
+  left: 100%;
+  opacity: 0;
+
+  transform: scale(0.9);
+  z-index: 2;
+  width: 451px;
+ 
+}
+
+.annotation__text{
+  font-family: var(--font-family);
+  font-weight: 300;
+  font-size: 16px;
+  color: var(--black-color-10);
 }
