--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -190,7 +190,8 @@
     padding: 13px;
     border: 1px solid var(--white-color-10);
     margin-top: -30px;
-    transition: color 0.3s ease-in-out;
+    transition: color 0.3s ease-in-out,
+    border .3s ease-in-out;
     overflow: hidden;
     z-index: 0;
     svg line {
@@ -198,13 +199,13 @@
       stroke: var(--white-color-10)
     }
     span {
-      background-color: var(--white-color-10);
+      background-color: var(--blue-color-10);
     }
     &:hover {
       svg line {
-        stroke: var(--black-color-10);
+      
       }
-      color: var(--black-color-10);
+      
     }
   }
 
@@ -247,6 +248,25 @@
     font-size: 20px;
     color: var(--white-color-10);
   
+  }
+  &__left-flicker{
+    width: 1541px;
+    height: 953px;
+    border-radius: 100%;
+    background-color: rgba(45, 76, 255, 0.5);
+    filter: blur(300px);
+    position: absolute;
+    z-index: -2;
+    animation: flicker alternate infinite 8s;
+  }
+
+  @keyframes flicker {
+    0%{
+      transform: scale(1.1);
+    } 50% {
+      
+      transform: scale(0.7);
+    }
   }
 }
 
