--- a/src/html/components/menu.html
+++ b/src/html/components/menu.html
@@ -94,7 +94,7 @@
             </div>
             </fieldset>
             <button class="form__send-btn">
-                <span class="send-text" style="opacity: 0;">Отправить</span>
+                <span class="send-text" >Отправить</span>
               <svg
                 width="22"
                 height="21"
