--- a/src/html/components/footer.html
+++ b/src/html/components/footer.html
@@ -3,7 +3,7 @@
     <div class="footer__left">
         <div class="footer__left-white"></div>
         <div class="footer__left-black"></div>
-        <div class="footer__left-flicker"></div>
+     
       <div class="footer__left-inner">
           <h4 class="footer__title">Давайте создадим что-то незабываемое!</h4>
           <p class="footer__text">
@@ -122,6 +122,15 @@
                
             </li>
         </ul>
+        <button class="footer__goup">
+          <svg width="22" height="29" viewBox="0 0 22 29" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <line y1="-0.5" x2="15.0229" y2="-0.5" transform="matrix(0.724337 -0.689446 -0.461492 -0.887144 0 10.3564)" stroke="var(--white-color-10)"/>
+            <path d="M10.968 29L10.9021 0.896306" stroke="var(--white-color-10)"/>
+            <line y1="-0.5" x2="15.0229" y2="-0.5" transform="matrix(-0.727564 -0.686039 0.457324 -0.8893 21.8115 10.3057)" stroke="var(--white-color-10)"/>
+            </svg>
+            
+            
+        </button>
     </div>
   </div>
 </footer>
