--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -249,24 +249,17 @@
     color: var(--white-color-10);
   
   }
-  &__left-flicker{
-    width: 1541px;
-    height: 953px;
-    border-radius: 100%;
-    background-color: rgba(45, 76, 255, 0.5);
-    filter: blur(300px);
+  &__goup{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid var(--white-color-10);
     position: absolute;
-    z-index: -2;
-    animation: flicker alternate infinite 8s;
-  }
-
-  @keyframes flicker {
-    0%{
-      transform: scale(1.1);
-    } 50% {
-      
-      transform: scale(0.7);
-    }
+    bottom: -80px;
+    right: 50px;
   }
 }
 
@@ -282,4 +275,6 @@
       fill: var(--black-color-10);
     }
   }
+
+  
 }
