--- a/src/html/components/menu.html
+++ b/src/html/components/menu.html
@@ -2,6 +2,19 @@
   <div class="menu__container">
     <div class="menu__left">
       <div class="menu__left-form">
+        <div class="menu__left-mobile">
+          <h4 class="menu__left-mobile-title">
+            Заполните форму, и мы вместе создадим нечто особенное.
+          </h4>
+          <button class="menu__left-mobile-btn">
+            <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M15.9511 11.7004L15.6383 0.427635" stroke="white"/>
+              <line y1="-0.5" x2="11.2772" y2="-0.5" transform="matrix(0.999654 0.026301 0.302535 -0.953138 4.72705 0)" stroke="white"/>
+              <line x1="0.646193" y1="15.4106" x2="15.553" y2="0.482452" stroke="white"/>
+              </svg>
+              
+          </button>
+        </div>
         <form class="menu__form">
           <h4 class="form__title">
             Каждая история начинается с идеи.<br />
