--- a/src/scss/base/main.scss
+++ b/src/scss/base/main.scss
@@ -105,7 +105,7 @@ label {
   mix-blend-mode: difference; 
   top: 0;
   left: 0;
-  @include mobile{
+  @media screen and (max-width:768px) {
     display: none;
   }
 }
@@ -127,8 +127,10 @@ label {
   font-size: 12px;
  
   transition: opacity 0.3s ease;
-  @include mobile{
+  @media screen and (max-width:768px) {
     display: none;
+  
+   
   }
 }
 
@@ -140,6 +142,9 @@ label {
   font-size: 30px;
   text-align: center;
   color: #fff;
+  @media screen and (max-width:768px) {
+    display: none;
+  }
 }
 .burger-menu {
   width: 60px;
@@ -152,6 +157,7 @@ label {
   right: 50px;
  padding: 30px 0;
   transition: gap 0.3s ease-in-out;
+  transition: top .3s ease-in-out;
   z-index: 5000;
   span {
     border: 1px solid var(--white-color-10);
@@ -160,11 +166,16 @@ label {
     transition: transform 0.3s ease-in-out;
   }
   @include mobile{
-    top: 25px;
+    top: 10px;
     right: 15px;
+    width: 45px;
+  
   }
+ 
 
 }
+
+
 
 // .burger-active {
 //   gap: 0;
