--- a/src/scss/components/menu.scss
+++ b/src/scss/components/menu.scss
@@ -7,29 +7,34 @@
   color: var(--white-color-10);
   background-color: var(--black-color-10);
   top: -120%;
-  
+
   opacity: 0;
-  
+  @include mobile {
+    height: auto;
+    overflow-y: scroll;
+  }
   transition: all 1s ease-in-out;
   &__container {
     display: flex;
-    @media screen and (max-width: 682px) {
+    @media screen and (max-width: 768px) {
       flex-direction: column-reverse;
+      height: 100vh;
     }
   }
   &__left {
     display: flex;
     flex-direction: column;
     height: 100vh;
-    flex: 0 1 35%;
+
+    flex-shrink: 0;
     @media screen and (max-width: 1350px) {
       flex: 0 0 45%;
     }
-    @media screen and (max-width: 682px) {
-      height: 40vh;
-      flex-direction: column-reverse;
+    @media screen and (max-width: 768px) {
+      flex: 0 1 auto;
+      height: auto;
+      flex-direction: row-reverse;
     }
-
   }
   &__left-form {
     height: 70%;
@@ -38,22 +43,65 @@
     display: flex;
     padding-bottom: 50px;
     padding-left: 50px;
+    padding-right: 30px;
     @media screen and (max-width: 1200px) {
       padding-left: 10px;
       padding-right: 10px;
     }
-    @media screen and (max-width: 682px) {
+    @media screen and (max-width: 768px) {
       height: 100%;
+
+      width: 100%;
+      padding: 30px 40px 40px 40px;
+      border-bottom: none;
+      border-right: none;
+      border-top: 1px solid var(--white-color-10);
     }
-    @include mobile{
-      padding-bottom: 20px;
+    @include mobile {
+      padding: 30px 10px 30px 10px;
     }
   }
+
+  &__left-mobile {
+    display: none;
+    @include mobile {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+  &__left-mobile-title {
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 16px;
+    color: var(--white-color-10);
+  }
+
+  &__left-mobile-btn{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid var(--white-color-10);
+    flex-shrink: 0;
+  }
+
   &__form {
     margin-top: auto;
     max-width: 578px;
     display: flex;
     flex-direction: column;
+    @media screen and (max-width: 768px) {
+      max-width: auto;
+    }
+    @include mobile {
+      margin: 0 auto;
+    }
+    @include mobile {
+      display: none;
+    }
   }
   .form__title {
     font-family: var(--font-family);
@@ -67,11 +115,16 @@
     @include tablet {
       font-size: 20px;
     }
-    @media screen and (max-width: 682px) {
-     margin-bottom: 20px;
-     font-size: 16px;
+    @media screen and (max-width: 768px) {
+      margin-bottom: 30px;
+      font-size: 25px;
+      max-width: 607px;
+      width: 100%;
     }
-    @include mobile{
+    @media screen and (max-width: 620px) {
+      font-size: 20px;
+    }
+    @include mobile {
       font-size: 13px;
     }
   }
@@ -79,13 +132,22 @@
     display: flex;
     align-items: center;
     gap: 50px;
+    @media screen and (max-width: 1350px) {
+      flex-direction: column;
+      gap: 30px;
+    }
     @include tablet {
       flex-direction: column;
       gap: 10px;
     }
-    @media screen and (max-width: 682px) {
+    @media screen and (max-width: 768px) {
       flex-direction: row;
-      gap:50px;
+      gap: 50px;
+    }
+    @include mobile {
+      flex-direction: column;
+      align-items: center;
+      padding-bottom: 30px;
     }
   }
   .form__send-btn {
@@ -104,9 +166,15 @@
     font-weight: 400;
     font-size: 20px;
     color: var(--white-color-10);
-    overflow: hidden; 
+    overflow: hidden;
     cursor: pointer;
-    
+    @media screen and (max-width: 768px) {
+      margin-top: -50px;
+      max-width: 250px;
+    }
+    @media screen and (max-width: 620px) {
+      font-size: 16px;
+    }
   }
   .form__inputs {
     display: flex;
@@ -114,6 +182,7 @@
     gap: 20px;
     max-width: 300px;
     width: 100%;
+    min-width: 210px;
     input {
       background-color: transparent;
       border-bottom: 1px solid var(--white-color-10);
@@ -129,15 +198,21 @@
     @media screen and (max-width: 1560px) {
       max-width: 100%;
     }
-    @include mobile{
+
+    @include mobile {
       font-size: 16px;
     }
   }
   &__left-logo {
-    border-right: 1px solid var(--white-color-10);
-    height: 30%;
-    @include mobile{
-      height: auto;
+  }
+  &__left-link {
+    writing-mode: horizontal-tb;
+    text-orientation: sideways-right;
+    @media screen and (max-width: 768px) {
+      writing-mode: vertical-lr;
+      text-orientation: mixed;
+      display: inline-block;
+      transform: rotate(180deg);
     }
   }
   .menu__inputs-wrapper {
@@ -169,7 +244,7 @@
     color: var(--white-color-10);
     position: relative;
     z-index: 1;
-    @include mobile{
+    @include mobile {
       font-size: 16px;
     }
   }
@@ -186,7 +261,7 @@
     bottom: 5px;
     transition: all 0.3s ease-in-out;
     z-index: 0;
-    @include mobile{
+    @media screen and (max-width: 768px) {
       font-size: 16px;
     }
   }
@@ -225,6 +300,23 @@
   }
   &__left-logo {
     display: flex;
+    border-right: 1px solid var(--white-color-10);
+    height: 30%;
+    @media screen and (max-width: 768px) {
+      height: 100%;
+      border-top: 1px solid var(--white-color-10);
+      border-right: none;
+      max-width: 100px;
+      width: 100%;
+    }
+    @include mobile {
+      display: none;
+    }
+    @media screen and (max-width: 768px) {
+      padding-left: 20px;
+      padding-bottom: 30px;
+      width: 100px;
+    }
   }
   &__left-link {
     font-family: var(--font-family);
@@ -235,9 +327,8 @@
     padding-bottom: 50px;
     padding-left: 50px;
     position: relative;
-    @include mobile{
-      padding: 10px;
-      font-size: 24px;
+    @media screen and (max-width: 768px) {
+      font-size: 40px;
     }
   }
   input[type='radio']:checked + .contact-method-label {
@@ -250,35 +341,47 @@
     margin-left: auto;
     padding-right: 154px;
     height: 100vh;
+    max-width: 65vw;
+    width: 100%;
     @media screen and (max-width: 1200px) {
       padding: 50px;
     }
-    @media screen and (max-width: 682px) {
-      height: 60vh;
-      width: 100%;
-      padding: 20px 10px;
+    @media screen and (max-width: 768px) {
+      height: 100%;
+      max-width: none;
+      width: 100vw;
+      position: relative;
+      &::before {
+        content: '';
+        height: 200vh;
+        width: 1px;
+        background-color: var(--white-color-10);
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 99px;
+      }
     }
     @include mobile {
-      height: 100%;
-      flex-shrink: 0;
+      padding: 50px 0 50px 20px;
+      &::before {
+        content: none;
+      }
     }
   }
   &__right-wrapper {
     height: 100%;
-   
-    
   }
   &__right-list {
     display: flex;
     flex-direction: column;
     text-align: right;
-    @media screen and (max-width: 682px) {
+    @media screen and (max-width: 768px) {
       gap: 15px;
     }
-    @include mobile{
+    @include mobile {
       gap: 5px;
     }
-  
   }
   &__right-list-link {
     font-family: var(--font-family);
@@ -288,17 +391,19 @@
     -webkit-text-stroke: 1px var(--white-color-10);
     opacity: 0.2;
 
-    @media screen and (max-width: 1560px) {
+    @media screen and (max-width: 1750px) {
       font-size: 70px;
     }
+
     @media screen and (max-width: 1200px) {
       font-size: 50px;
     }
-    @media screen and (max-width: 816px) {
-      font-size: 30px;
-    }
+
     @media screen and (max-height: 768px) {
-      font-size: 24px;
+      font-size: 50px;
+    }
+    @include mobile {
+      font-size: 40px;
     }
   }
   .swiper-slide a {
@@ -314,6 +419,9 @@
     gap: 40px;
     font-size: 140px;
     opacity: 1;
+    @media screen and (max-width: 1750px) {
+      font-size: 110px;
+    }
     @media screen and (max-width: 1560px) {
       font-size: 100px;
     }
@@ -329,21 +437,20 @@
     align-items: center;
     gap: 40px;
     justify-content: end;
-    @media screen and (max-width: 682px) {
+    @media screen and (max-width: 768px) {
       width: 100%;
-      justify-content: center;
+      margin-left: 170px;
+      justify-content: start;
       align-items: start;
       height: auto;
     }
-    @include mobile{
-    
-      
+    @include mobile {
+      margin-left: 0;
     }
-
   }
 }
-.swiper-wrapper{
-  @media screen and (max-width: 682px) {
+.swiper-wrapper {
+  @media screen and (max-width: 768px) {
     align-items: center;
     justify-content: center;
   }
