--- a/src/scss/components/menu.scss
+++ b/src/scss/components/menu.scss
@@ -2,7 +2,7 @@
   position: fixed;
   min-height: 100%;
   width: 100vw;
-  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   z-index: 100;
   color: var(--white-color-10);
   background-color: var(--black-color-10);
