--- a/src/scss/components/menu.scss
+++ b/src/scss/components/menu.scss
@@ -9,7 +9,9 @@
   top: -120%;
 
   opacity: 0;
-
+  @supports (-webkit-touch-callout: none){
+    height: -webkit-fill-available;
+  }
   transition: all 1s ease-in-out;
   &__container {
     display: flex;
