--- a/src/scss/components/menu.scss
+++ b/src/scss/components/menu.scss
@@ -1,6 +1,7 @@
 .menu {
   position: fixed;
-  min-height: 100%;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
   width: 100vw;
   height: calc(var(--vh, 1vh) * 100);
   z-index: 100;
@@ -9,9 +10,7 @@
   top: -120%;
 
   opacity: 0;
-  @supports (-webkit-touch-callout: none){
-    height: -webkit-fill-available;
-  }
+ 
   transition: all 1s ease-in-out;
   &__container {
     display: flex;
