--- a/src/scss/components/menu.scss
+++ b/src/scss/components/menu.scss
@@ -13,6 +13,7 @@
   transition: all 1s ease-in-out;
   &__container {
     display: flex;
+    height: 100%;
     @media screen and (max-width: 768px) {
       flex-direction: column-reverse;
      
@@ -32,6 +33,7 @@
       height: auto;
       flex-direction: row-reverse;
     }
+   
   }
   &__left-form {
     height: 70%;
@@ -61,19 +63,20 @@
 
   &__left-mobile {
     display: none;
-    @media screen and (max-height:578px){
+    @include mobile {
       display: flex;
       align-items: center;
-      justify-content: center;
+      width: 100%;
+      justify-content: space-between;
     }
-     
-    }
-  
+  }
   &__left-mobile-title {
     font-family: var(--font-family);
     font-weight: 400;
     font-size: 16px;
     color: var(--white-color-10);
+    max-width: 247px;
+    width: 100%;
   }
 
   &__left-mobile-btn{
@@ -98,11 +101,9 @@
     @include mobile {
       margin: 0 auto;
     }
-    @media screen and (max-height:578px){
+    @include mobile {
       display: none;
-     
     }
-     
   }
   .form__title {
     font-family: var(--font-family);
