--- a/src/html/components/menu.html
+++ b/src/html/components/menu.html
@@ -142,29 +142,29 @@
       </div>
     </div>
     <div class="menu__right" >
-        <div class="swiper menu__right-wrapper">
+        <div class="menu__right-wrapper">
             <!-- Additional required wrapper -->
-            <div class="swiper-wrapper menu__right-list">
+            <div class="menu__right-list">
               <!-- Slides -->
-              <div class="swiper-slide">
+              <div class="slide">
                 <a href="#" class="menu__right-list-link">ПОРТФОЛИО</a>
               </div>
-              <div class="swiper-slide">
+              <div class="slide">
                 <a href="#" class="menu__right-list-link">О НАС</a>
               </div>
-              <div class="swiper-slide">
+              <div class="slide">
                 <a href="#" class="menu__right-list-link">ГЛАВНАЯ</a>
               </div>
-              <div class="swiper-slide">
+              <div class="slide">
                 <a href="#" class="menu__right-list-link">УСЛУГИ</a>
               </div>
-              <div class="swiper-slide">
+              <div class="slide">
                 <a href="#live" class="menu__right-list-link">ЭТАПЫ</a>
               </div>
-              <div class="swiper-slide">
+              <div class="slide">
                 <a href="#" class="menu__right-list-link">РАСЧЕТ</a>
               </div>
-              <div class="swiper-slide">
+              <div class="slide">
                 <a href="#" class="menu__right-list-link">КОНТАКТЫ</a>
               </div>
               
