--- a/src/scss/components/menu.scss
+++ b/src/scss/components/menu.scss
@@ -1,13 +1,13 @@
 .menu {
-  position: fixed;
+  position: absolute;
 
   width: 100vw;
-
+  height: 100%;
   z-index: 100;
   color: var(--white-color-10);
   background-color: var(--black-color-10);
-  top: 0;
-  bottom: 120%;
+  top: -100%;
+  bottom: 100%;
   opacity: 0;
 
   transition: all 1s ease-in-out;
@@ -253,7 +253,7 @@
   .menu__label-name,
   .menu__placeholder-connect {
     font-family: var(--font-family);
-    font-weight: 400;
+    font-weight: 300;
     font-size: 20px;
     color: var(--white-color-10);
     opacity: 0.5;
@@ -353,7 +353,7 @@
       width: 100vw;
       position: relative;
       padding: 30px 0px 0px 130px;
-     
+
       &::before {
         content: '';
         height: 200vh;
@@ -380,11 +380,11 @@
     flex-direction: column;
     text-align: right;
     max-height: 100vh;
-  
+
     gap: 50px;
     @media screen and (max-width: 768px) {
       gap: 15px;
-     text-align: left;
+      text-align: left;
     }
     @include mobile {
       gap: 5px;
@@ -414,11 +414,6 @@
       font-size: 40px;
     }
   }
-
-
- 
-  
-  
 }
 .swiper-wrapper {
   @media screen and (max-width: 768px) {
@@ -428,7 +423,8 @@
 }
 .menu-active {
   transition: all 1s ease-in-out;
-  bottom: 0;
+  top: 0%;
+  bottom:0%;
   opacity: 1;
 }
 
@@ -455,7 +451,9 @@ fieldset {
   color: transparent;
   -webkit-text-stroke: 1px var(--white-color-10);
   opacity: 0.2;
-  transition: opacity 0.3s, color 0.3s;
+  transition:
+    opacity 0.3s,
+    color 0.3s;
 
   @media screen and (max-width: 1750px) {
     font-size: 70px;
@@ -476,8 +474,7 @@ fieldset {
 // Активный элемент:
 .menu__right-list-link.active {
   color: var(--white-color-10);
- 
- 
+
   gap: 40px;
   font-size: 140px;
   opacity: 1;
@@ -499,7 +496,6 @@ fieldset {
 
 .menu__right-list {
   overflow: auto;
- 
 }
 
 .menu__right-list::-webkit-scrollbar {
