--- a/src/scss/components/menu.scss
+++ b/src/scss/components/menu.scss
@@ -23,7 +23,7 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
-
+    width: 40vw;
     flex-shrink: 0;
     @media screen and (max-width: 1350px) {
       flex: 0 0 45%;
@@ -32,6 +32,7 @@
       flex: 0 1 auto;
       height: auto;
       flex-direction: row-reverse;
+      width: 100%;
     }
    
   }
@@ -43,6 +44,7 @@
     padding-bottom: 50px;
     padding-left: 50px;
     padding-right: 30px;
+    width: 100%;
     @media screen and (max-width: 1200px) {
       padding-left: 10px;
       padding-right: 10px;
@@ -51,11 +53,12 @@
       height: 100%;
 
       width: 100%;
-      padding: 30px 40px 40px 40px;
+      padding: 30px 40px 40px 80px;
       border-bottom: none;
       border-right: none;
       border-top: 1px solid var(--white-color-10);
     }
+   
     @include mobile {
       padding: 15px 10px 15px 10px;
     }
@@ -65,10 +68,25 @@
     display: none;
     @include mobile {
       display: flex;
-      align-items: center;
+      flex-direction: column;
       width: 100%;
-      justify-content: space-between;
+      align-items: start;
+      gap: 20px;
+      position: absolute;
+      background-color: var(--black-color-10);
+      bottom: -245px;
+      z-index: 5;
+      padding: 20px 10px;
+      border-top: 1px solid var(--white-color-10);
+      left: 0;
     }
+  }
+  &__left-mobile-first{
+    display: flex;
+   
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
   }
   &__left-mobile-title {
     font-family: var(--font-family);
@@ -92,9 +110,10 @@
 
   &__form {
     margin-top: auto;
-    max-width: 578px;
+    
     display: flex;
     flex-direction: column;
+    width: 100%;
     @media screen and (max-width: 768px) {
       max-width: auto;
     }
@@ -119,13 +138,11 @@
     }
     @media screen and (max-width: 768px) {
       margin-bottom: 30px;
-      font-size: 25px;
+      
       max-width: 607px;
       width: 100%;
     }
-    @media screen and (max-width: 620px) {
-      font-size: 20px;
-    }
+   
     @include mobile {
       font-size: 13px;
     }
@@ -134,9 +151,12 @@
     display: flex;
     align-items: center;
     gap: 50px;
+   
     @media screen and (max-width: 1350px) {
       flex-direction: column;
       gap: 30px;
+      max-width: 300px;
+    
     }
     @include tablet {
       flex-direction: column;
@@ -145,6 +165,7 @@
     @media screen and (max-width: 768px) {
       flex-direction: row;
       gap: 50px;
+      max-width: none;
     }
     @include mobile {
       flex-direction: column;
@@ -153,7 +174,7 @@
     }
   }
   .form__send-btn {
-    max-width: 200px;
+    max-width: 300px;
     width: 100%;
     border-radius: 50px;
     padding: 13px;
@@ -170,13 +191,19 @@
     color: var(--white-color-10);
     overflow: hidden;
     cursor: pointer;
+    margin-top: -40px;
+    svg{
+      transform: rotate(45deg);
+    }
+    @media screen and (max-width: 1350px) {
+      margin-top: 0;
+      max-width: 300px;
+    }
     @media screen and (max-width: 768px) {
       margin-top: -50px;
       max-width: 250px;
     }
-    @media screen and (max-width: 620px) {
-      font-size: 16px;
-    }
+    
   }
   .form__inputs {
     display: flex;
@@ -184,7 +211,7 @@
     gap: 20px;
     max-width: 300px;
     width: 100%;
-    min-width: 210px;
+    min-width: 240px;
     input {
       background-color: transparent;
       border-bottom: 1px solid var(--white-color-10);
@@ -192,6 +219,7 @@
       font-family: var(--font-family);
       font-weight: 300;
       font-size: 20px;
+      width: 100%;
       color: var(--white-color-10);
       &::placeholder {
         color: rgba(255, 255, 255, 0.5);
@@ -199,6 +227,9 @@
     }
     @media screen and (max-width: 1560px) {
       max-width: 100%;
+    }
+    @media screen and (max-width: 768px) {
+      max-width: 300px;
     }
 
     @include mobile {
@@ -311,13 +342,9 @@
       max-width: 100px;
       width: 100%;
     }
-    @include mobile {
-      display: none;
-    }
+ 
     @media screen and (max-width: 768px) {
-      padding-left: 20px;
-      padding-bottom: 30px;
-      width: 100px;
+      display: none;
     }
   }
   &__left-link {
@@ -356,6 +383,7 @@
       max-width: none;
       width: 100vw;
       position: relative;
+      padding: 0;
       &::before {
         content: '';
         height: 200vh;
@@ -364,7 +392,7 @@
         display: block;
         position: absolute;
         top: 0;
-        left: 99px;
+        left: 50px;
       }
     }
     @include mobile {
@@ -383,9 +411,11 @@
     text-align: right;
     @media screen and (max-width: 768px) {
       gap: 8px;
+      padding-left: 80px;
     }
     @include mobile {
       gap: 5px;
+      padding-left: 0px;
     }
   }
   &__right-list-link {
@@ -436,6 +466,9 @@
     @media screen and (max-width: 816px) {
       font-size: 60px;
     }
+    @include mobile{
+      font-size: 50px;
+    }
   }
   .swiper-slide {
     display: flex;
@@ -444,7 +477,7 @@
   height: auto; 
     @media screen and (max-width: 768px) {
       width: 100%;
-      margin-left: 170px;
+      margin-left: 0px;
       justify-content: start;
       align-items: start;
       height: auto;
@@ -481,5 +514,13 @@ fieldset {
     svg path {
       fill: var(--black-color-10);
     }
+  }
+}
+.menu__left-mobile{
+  .form__inputs{
+   margin-bottom: 20px;
+  }
+  .form__inputs-wrapper{
+    opacity: 0;
   }
 }
