--- a/src/scss/components/menu.scss
+++ b/src/scss/components/menu.scss
@@ -6,8 +6,8 @@
   z-index: 100;
   color: var(--white-color-10);
   background-color: var(--black-color-10);
- top: -100%;
-  bottom: 100%;
+ top: -150%;
+  bottom: 150%;
   opacity: 0;
  
   transition: all 1s ease-in-out;
@@ -61,6 +61,7 @@
    
     @include mobile {
       padding: 15px 10px 15px 10px;
+      border-top: none;
     }
   }
 
@@ -83,7 +84,6 @@
   }
   &__left-mobile-first{
     display: flex;
-   
     align-items: center;
     width: 100%;
     justify-content: space-between;
@@ -522,5 +522,6 @@ fieldset {
   }
   .form__inputs-wrapper{
     opacity: 0;
+    visibility: hidden;
   }
 }
