--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -122,6 +122,10 @@
     <div class="header__content" > 
       <h1 class="header__title" ><span class="light-header">СВЕТ</span> И <span class="shadow-header">ТЕНЬ </span><br>В КАЖДОЙ ДЕТАЛИ</h1>
       <p class="header__subtitle" >Начните свое цифровое путешествие вместе с нами</p>
+      <button class="header__mobile-action">
+        ПОГРУЗИТЬСЯ
+В СОЗДАНИЕ
+      </button>
       <div class="header__scroll-down" >
         <svg class="mouse-svg" width="46" height="79" viewBox="0 0 46 79" fill="none" xmlns="http://www.w3.org/2000/svg">
             <rect x="0.5" y="0.5" width="44.0838" height="78" rx="22.0419" stroke="white" stroke-opacity="0.5"/>
@@ -131,8 +135,15 @@
             <line class="line-animate" x1="11.8678" y1="35.1197" x2="23.1387" y2="43.0093" stroke="white" stroke-opacity="0.5"/>
             <line class="line-animate transform-line" y1="-0.5" x2="13.7579" y2="-0.5" transform="matrix(-0.819232 0.573462 0.573462 0.819232 34.123 35.5293)" stroke="white" stroke-opacity="0.5"/>
         </svg>
-        
+        <svg class="mobile-svg" width="23" height="14" viewBox="0 0 23 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <line x1="0.286731" y1="0.590384" x2="11.5577" y2="8.48004" stroke="white"/>
+          <line y1="-0.5" x2="13.7579" y2="-0.5" transform="matrix(-0.819232 0.573462 0.573462 0.819232 22.542 1)" stroke="white"/>
+          <line x1="0.286731" y1="5.09875" x2="11.5577" y2="12.9884" stroke="white"/>
+          <line y1="-0.5" x2="13.7579" y2="-0.5" transform="matrix(-0.819232 0.573462 0.573462 0.819232 22.542 5.50836)" stroke="white"/>
+          </svg>
+          
             <span class="mouse-text" >scroll</span>
+            <span class="mobile-text" >swipe</span>
           
       </div>
     </div>
