--- a/src/scss/base/vars.scss
+++ b/src/scss/base/vars.scss
@@ -37,8 +37,8 @@
   --color-bg1:#ffffff;
   --color-bg2:#ffffff;
 
-  --gradient-color-start: rgba(0, 0, 0, 0.1); /* Черный с прозрачностью */
-  --gradient-color-middle: rgba(0, 0, 0, 1); /* Черный */
+  --gradient-color-start: rgba(0, 0, 0, 0.1); 
+  --gradient-color-middle: rgba(0, 0, 0, 1); 
   --gradient-color-end: rgba(0, 0, 0, 0.1); 
 }
 
