--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -385,6 +385,11 @@ header {
         display: inline;
       }
     }
+    @include small-mobile{
+      .mobile-text {
+        display: none;
+      }
+    }
   }
 }
 
