--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -278,6 +278,7 @@ header {
     }
     @media screen and (max-width: 700px) {
       font-size: 60px;
+      max-width: 416px;
     }
     @media screen and (max-width: 530px) {
       font-size: 50px;
