--- a/src/scss/base/main.scss
+++ b/src/scss/base/main.scss
@@ -14,6 +14,8 @@ html {
 
 .body {
   background-color: var(--black-color-10);
+  max-width: 100vw;
+  overflow-x: hidden;
   &--fixed {
     overflow: hidden;
   }
